fix(Experience): fixes company logo on mobile

--- a/components/sections/Experience/ExperienceCard/ExperienceCard.module.css
+++ b/components/sections/Experience/ExperienceCard/ExperienceCard.module.css
@@ -56,6 +56,7 @@
   display: flex;
   border-radius: 100%;
 
+  width: 48px;
   min-width: 48px;
   height: 48px;
   padding: 8px;
@@ -162,6 +163,7 @@
     position: static;
     transform: none;
     margin-right: 16px;
+    width: 40px;
     min-width: 40px;
     height: 40px;
   }
